# OSDetect

./: .gitignore  .travis.yml  AUTHOR.md  COPYING  COPYING.md  LICENSE  OSDetect.py  README  README.md  _config.yml  index.html  index.md  params.json  pyproject.toml  setup.py
tests/: test_0_type.py  test_1_os.py
